# ProtoCell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
ProtoCells/: CMakeLists.txt  ProtoCells.cpp  ProtoCells.h
